fixing overflow

--- a/src/styles/testimonial.css
+++ b/src/styles/testimonial.css
@@ -16,3 +16,6 @@
         object-fit: cover;
     }
 }
+.testimonial{
+    overflow-y: hidden;
+}
